--- a/html-element-collection/dropdown-menu/css/style.css
+++ b/html-element-collection/dropdown-menu/css/style.css
@@ -35,6 +35,7 @@ overflow-x: hidden;
   -ms-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+  user-select: none;
 }
 
 /* Little arrow */
