Добавлено решение ДЗ xhr

--- a/xhr/books-catalog/css/style.css
+++ b/xhr/books-catalog/css/style.css
@@ -101,6 +101,7 @@ body::before {
   box-shadow: 1px 5px 10px 0 #666;
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  transform: scale(1.05);
 }
 
 #content img {
