--- a/xhr/tabs/components/sms-tab.html
+++ b/xhr/tabs/components/sms-tab.html
@@ -1,6 +1,1 @@
-<h1>SMS</h1>
-<p>Подпишитесь на SMS-оповещения!</p>
-<form>
-  <input type="tel" placeholder="8 (999) 980-70-80" pattern="9 ([0-9]{3}) [0-9]{3}-[0-9]{2}-[0-9]{2}">
-  <input type="submit" value="Выслать код">
-</form>
+<h1>SMS</h1><p>Подпишитесь на SMS-оповещения!</p><form><input type="tel" placeholder="8 (999) 980-70-80" pattern="9 ([0-9]{3}) [0-9]{3}-[0-9]{2}-[0-9]{2}"><input type="submit" value="Выслать код"></form>
